[UPD] fonts using cufon

--- a/css/screen.less
+++ b/css/screen.less
@@ -1,5 +1,5 @@
 /* 0. Imports */
-@import "fonts.css";
+/*@import "fonts.css";*/
 @import "normalize.css";
 @import "languages.css";
 /* 1. Variables */
